css/index.css
.about, .history {
    height: 50vh;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
}

.about {
    background-image: url("../imgs/aboout.jpeg");
}

.history {
    background-image: url("../imgs/long_island_sound_edit.jpg");
}

.about_hidden, .history_hidden {
    background-image: none;
}

.about_text, .history_text {
    visibility: hidden;
}

.small_hero {
    background-image: url('../imgs/white.jpg');
}

.mission {
    margin: 0 0 5vh 0;
}

.logo {
    background-image: url('../imgs/rye_gc_trans2.png');
}

.img_sizing {
    margin: 0 0 5vh 0;
}

